--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,7 @@ spring:
 server:
   port: 8080
 
+jwt:
+  secret: my-secret-key-for-jwt-token-generation-and-validation-12345
+  expiration: 86400000
+
