--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '4.0.2'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'jacoco'
 }
 
 group = 'com.devsenior.cdiaz'
@@ -55,8 +56,18 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
+
 }
 
 tasks.withType(JavaCompile) {
     options.compilerArgs << '-parameters'
+}
+
+jacocoTestReport {
+    dependsOn test 
+    reports {
+        xml.required = true
+        html.required = true
+    }
 }
